---
source: tests/feature_tests/uninstall.rs
expression: "&source.trim()"
---
$ErrorActionPreference = "Stop"
fnm env | Out-String | Invoke-Expression
fnm install 12.0.0
fnm alias 12.0.0 hello
$($__out__ = $($($__out__ = $(fnm ls | Select-String 'v12.0.0'); echo $__out__; if ($__out__ -eq $null){ exit 1 } else { $__out__ }) | Select-String 'hello'); echo $__out__; if ($__out__ -eq $null){ exit 1 } else { $__out__ })
fnm uninstall hello
If ("$(fnm ls)" -ne "* system") {
    Write-Output ('Expected fnm ls to be "* system", Got: ' + $(fnm ls))
    exit 1
}
